--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="button_div">
         <button class="button">
-            <a href="RESUME.pdf" download>
+            <a href="../RESUME.pdf" download>
                 <i class="fa fa-download"></i>&nbsp&nbsp&nbsp&nbspDownload Resume
             </a>
         </button>
